--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,16 @@
     <string name="repository_text">%1$s Repository</string>
     <string name="search">Search</string>
     <string name="search_hint">Search…</string>
-    <string name="change_language">Change Language</string>
     <string name="favorite">Favorite</string>
     <string name="unfavorite">Unfavorite</string>
     <string name="no_favorite_users">You have no favorite Users yet!</string>
+    <string name="alarm_message">Go find popular users on Github!</string>
+    <string name="select_language">Select Language</string>
+    <string name="reminder">Reminder at 9:00 AM</string>
+    <string name="settings">Settings</string>
+    <string name="key_language">language</string>
+    <string name="key_reminder">reminder</string>
+    <string name="reminder_removed">Reminder removed</string>
+    <string name="reminder_set">Reminder Set</string>
 
 </resources>
